style: Section one

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
 </head>
 
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse" id="contenidoNavbar">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a href="#home" class="nav-link">Inico</a>
+                        <a href="#inicio" class="nav-link">Inico</a>
                     </li>
                     <li class="nav-item">
                         <a href="#about" class="nav-link">Sobre mí</a>
@@ -43,6 +44,21 @@
     </nav>
 
 
+    <!--Banner Principal-->
+    <section class="bgimage" id="inicio">
+        <div class="container-fluid">
+            <div class="row row-cols-4">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <h2 class="hero_tittle">Hola, Soy Frank Pezo </h2>
+                    <p class="hero_desc">
+                        Mi nombre completo es Frank Anderson Pezo Gómez y este es mi portafolio donde comparto alguno de
+                        los proyectos en los que he trabajado, así como para mostrar mis habilidades y enfoque en el
+                        desarrollo de software.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
