--- a/index.html
+++ b/index.html
@@ -11,60 +11,116 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
-        <div class="container">
-            <a href="#" class="navbar-brand">Mi Portafolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#contenidoNavbar"" aria-controls=" contenidoNavbar"" aria-expanded=" false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse" id="contenidoNavbar">
+    <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">PORTAFOLIO</a>
+
+            <!-- Menú horizontal en pantallas grandes -->
+            <div class="collapse navbar-collapse d-none d-lg-flex">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
-                        <a href="#inicio" class="nav-link">Inico</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link">Sobre mí</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#services" class="nav-link">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#portafolio" class="nav-link">Portafolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contacto</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#sobreMi">Sobre mí</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                 </ul>
             </div>
 
+            <!-- Botón hamburguesa solo en responsive -->
+            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Menú lateral solo en responsive -->
+            <div class="offcanvas offcanvas-end bg-dark text-white d-lg-none" data-bs-scroll="true" tabindex="-1"
+                id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">PORTAFOLIO</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link text-white" href="#inicio">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#sobreMi">Sobre mí</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#services">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#portfolio">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
 
     <!--Banner Principal-->
-    <section class="bgimage" id="inicio">
-        <div class="container-fluid">
-            <div class="row row-cols-4">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_tittle">Hola, Soy Frank Pezo </h2>
-                    <p class="hero_desc">
-                        Mi nombre completo es Frank Anderson Pezo Gómez y este es mi portafolio donde comparto alguno de
-                        los proyectos en los que he trabajado, así como para mostrar mis habilidades y enfoque en el
-                        desarrollo de software.
-                    </p>
-                </div>
+    <section class="bgimage " id="inicio">
+        <div class="d-flex flex-column justify-content-center align-items-center text-white text-center h-100">
+            <h1 class="hero_tittle ">Hola, Soy Frank Pezo</h1>
+
+            <div class="col-lg-6 col-md-8 col-sm-12">
+                <p class="hero_desc">
+                    Mi nombre completo es Frank Anderson Pezo Gómez y este es mi portafolio donde comparto algunos
+                    de
+                    los proyectos en los que he trabajado, así como para mostrar mis habilidades y enfoque en el
+                    desarrollo de software.
+                </p>
             </div>
+            +
         </div>
     </section>
 
 
+    <!-- Sección Sobre mí-->
+    <section id="sobreMi" class="container mt-5">
+
+        <div class="row">
+            <h2 class="text-center mb-5 mt-5 title-sect2">Sobre mí</h2>
+            <div class="col-md-6">
+                <img src="img/4.jpg" alt="Sobre mí" class="img-fluid ">
+            </div>
+            <div class="col-md-6 mt-3 mt-md-0">
+
+                <ul>
+                    <li class="infoName">Nombre: Frank Pezo</li>
+                    <li class="infoName">Edad: 24 </li>
+                </ul>
+                <p class="info-sect2">
+                    Mi nombre completo es Frank Anderson Pezo Gómez y este es mi portafolio donde comparto alguno de los
+                    proyectos en los que he trabajado, así como para mostrar mis habilidades y enfoque en el desarrollo
+                    de software.
+                    Actualmente tengo 24 años y soy <b>bachiller de la carrera de Ingeniería de sistema e
+                        informática de la
+                        Universidad Nacional de la Amazonía Peruana (UNAP)</b> me interesa cada día aprender nuevas
+                    cosas
+                    en
+                    especial en el ámbito de desarrollo de software e ir ganado experiencia. También apasionado a la
+                    lectura, música, ciencia y disfrutar tiempo de calidad con los amigos.
+                </p>
+                <a href="" class="btn-cv btn btn-primary rounded-pill">Ver Curriculum Vitae</a>
+
+                <p class="info-hobbies mt-4">Mis hobbies: </p>
+                <div class="d-flex flex-row">
+                    <img class="imgIcon m-1" src="img/icon/programacion.png" width="50" height="50" alt="">
+                    <img class="imgIcon m-1" src="img/icon/read.png" width="50" height="50" alt="">
+                    <img class="imgIcon m-1" src="img/icon/atomico.png" width="50" height="50" alt="">
+                    <img class="imgIcon m-1" src="img/icon/music.png" width="50" height="50" alt="">
+                    <img class="imgIcon m-1" src="img/icon/guitar.png" width="50" height="50" alt="">
+                    <img class="imgIcon m-1" src="img/icon/movie.png" width="50" height="50" alt="">
+                </div>
+
+            </div>
 
 
+        </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    </section>
+
+
+    <script src=" js/bootstrap.bundle.min.js">
+    </script>
 </body>
 
 </html>
