--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row">
             <h2 class="text-center mb-5 mt-5 title-sect2">Sobre mí</h2>
             <div class="col-md-6">
-                <img src="img/4.jpg" alt="Sobre mí" class="img-fluid ">
+                <img src="img/4.jpg" alt="Sobre mí" class="img-fluid h-md-100 ">
             </div>
             <div class="col-md-6 mt-3 mt-md-0">
 
@@ -127,11 +127,11 @@
         </div>
 
 
-        <div class="d-flex flex-column align-items-start m-4">
+        <div class="m-4">
 
             <div class="mb-5 ">
                 <h3 class="text-start mb-5">Algoritmos, Infraestructura y soporte técnico</h3>
-                <div class="d-lg-flex flex-lg-row justify-content-center d-none gap-4">
+                <div class="d-lg-flex flex-lg-row justify-content-start  d-none gap-4">
                     <!--1-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/poo.jpg" height="300" class="card-img-top" alt="...">
@@ -169,10 +169,10 @@
 
                 </div>
                 <!-- responsive carrusel 1-->
-                <div class="d-flex flex-column d-lg-none">
+                <div class="d-flex flex-column  d-lg-none">
 
                     <div id="carouselExampleCaptions" class="carousel slide container" data-bs-ride="carousel">
-                        <div class="carousel-inner">
+                        <div class="carousel-inner  ">
 
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
@@ -254,15 +254,11 @@
 
             </div>
 
-
-
-
-
             <!--- -->
             <div class="mb-5">
                 <h3 class="text-start mb-5">Lenguajes de programación</h3>
 
-                <div class="d-lg-flex flex-lg-row justify-content-center d-none  gap-4">
+                <div class="d-lg-flex flex-lg-row justify-content-start d-none  gap-4">
                     <!--1-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/php.jpg" height="300" class="card-img-top" alt="...">
@@ -412,7 +408,7 @@
             <div class="mb-5">
                 <h3 class="text-start mb-5">Frameworks y desarrollo web</h3>
 
-                <div class="d-lg-flex flex-lg-row justify-content-center d-none gap-4">
+                <div class="d-lg-flex flex-lg-row justify-content-start d-none gap-4">
                     <!--1-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/laravel.jpg" height="300" class="card-img-top" alt="...">
@@ -435,7 +431,7 @@
                                 en el desarrollo de aplicaciones móviles con Flutter y conexión a APIs REST.</p>
                         </div>
                     </div>
-                    <!--1-->
+                    <!--3-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/htmlCss.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -446,7 +442,7 @@
                         </div>
                     </div>
 
-                    <!--2-->
+                    <!--4-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/boostrap.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -461,7 +457,7 @@
                 <!-- responsive carrusel 3-->
                 <div class="d-flex flex-column d-lg-none">
 
-                    <div id="carouselExampleCaptions" class="carousel slide container" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions3" class="carousel slide container" data-bs-ride="carousel">
                         <div class="carousel-inner">
 
                             <!-- Slide 1 -->
@@ -469,7 +465,18 @@
                                 <div class="d-flex justify-content-center align-items-center">
 
                                     <!--1-->
-
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/laravel.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">Laravel</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de conceptos como: rutas, controladores, vistas
+                                                y migraciones.
+                                                Experiencia en el desarrollo de aplicaciones web con Laravel y conexión
+                                                a bases de datos
+                                                MySQL.</p>
+                                        </div>
+                                    </div>
 
 
                                 </div>
@@ -480,7 +487,17 @@
                                 <div class="d-flex justify-content-center align-items-center">
 
                                     <!--2-->
-
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/flutter.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">Flutter</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de conceptos como: widgets, estado, y
+                                                navegación. Experiencia
+                                                en el desarrollo de aplicaciones móviles con Flutter y conexión a APIs
+                                                REST.</p>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -489,7 +506,17 @@
                             <div class="carousel-item ">
                                 <div class="d-flex justify-content-center align-items-center">
 
-
+                                    <!--3-->
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/htmlCss.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">HTML y Css</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de conceptos como: etiquetas, atributos, y
+                                                selectores.
+                                                En Css experiencia aplicando<b>Flexbox</b> y <b>Grid</b>.</p>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -499,7 +526,18 @@
                             <div class="carousel-item ">
                                 <div class="d-flex justify-content-center align-items-center">
 
-
+                                    <!--4-->
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/boostrap.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">bootstrap</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de conceptos como: contenedores, filas y
+                                                columnas.
+                                                Experiencia en el desarrollo de interfaces responsivas con Bootstrap.
+                                            </p>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
@@ -507,12 +545,12 @@
                         </div>
 
                         <!-- Controles -->
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions3"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions3"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon"></span>
                             <span class="visually-hidden">Next</span>
@@ -527,7 +565,7 @@
             <div class="mb-5">
                 <h3 class="text-start mb-5">Control de versiones y ofimática</h3>
 
-                <div class="d-lg-flex flex-lg-row justify-content-center d-none  gap-4">
+                <div class="d-lg-flex flex-lg-row justify-content-start d-none  gap-4">
                     <!--1-->
                     <div class="card bg-dark" style="width: 18rem;">
                         <img src="img/Git y github.jpg" height="300" class="card-img-top" alt="...">
@@ -556,7 +594,7 @@
                 <!-- responsive carrusel 4-->
                 <div class="d-flex flex-column d-lg-none">
 
-                    <div id="carouselExampleCaptions" class="carousel slide container" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions4" class="carousel slide container" data-bs-ride="carousel">
                         <div class="carousel-inner">
 
                             <!-- Slide 1 -->
@@ -564,7 +602,18 @@
                                 <div class="d-flex justify-content-center align-items-center">
 
                                     <!--1-->
-
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/Git y github.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">Git y Github</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de conceptos como: repositorios, ramas y
+                                                merges.
+                                                Experiencia en el uso de Git y Github para el control de versiones y
+                                                colaboración en
+                                                proyectos.</p>
+                                        </div>
+                                    </div>
 
 
                                 </div>
@@ -575,39 +624,34 @@
                                 <div class="d-flex justify-content-center align-items-center">
 
                                     <!--2-->
-
-
-                                </div>
-                            </div>
-
-                            <!-- Slide 3 -->
-                            <div class="carousel-item ">
-                                <div class="d-flex justify-content-center align-items-center">
-
-
-
-                                </div>
-                            </div>
-
-
-                            <!-- Slide 4 -->
-                            <div class="carousel-item ">
-                                <div class="d-flex justify-content-center align-items-center">
-
-
+                                    <div class="card bg-dark" style="width: 18rem;">
+                                        <img src="img/office.jpg" height="300" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h1 class="fs-5">Microsoft Office</h1>
+                                            <p class="card-text"><b>Nivel: Intermedio</b></p>
+                                            <p class="card-text">Dominio de herramientas como: Word, Excel y PowerPoint.
+                                                Experiencia en la creación de documentos, hojas de cálculo y
+                                                presentaciones efectivas.
+                                            </p>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
+
+
+
+
 
                         </div>
 
                         <!-- Controles -->
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions4"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions4"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon"></span>
                             <span class="visually-hidden">Next</span>
